Fix spacing on footer

--- a/components/footer/styles.module.css
+++ b/components/footer/styles.module.css
@@ -38,6 +38,7 @@
 		font-weight: normal;
 		margin: 0;
 		padding: 0;
+		margin-bottom: 0.4em;
 	}
 
 	h2 {
@@ -52,5 +53,6 @@
 		list-style: none;
 		margin: 0;
 		padding: 0;
+		line-height: 1.8em;
 	}
 }
